# legal-text-mcp-de

./: .coderabbit.yaml  .commitlintrc.json  .gitignore  .gitleaks.toml  .mega-linter.yml  .pre-commit-config.yaml  .release-please-config.json  .secrets.baseline  .trivyignore  404.html  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Justfile  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  index.html  mkdocs.yml  pyproject.toml  server.json  smithery.yaml  versions.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  spdx-header-exempt.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  commitlint.yml  dco.yml  dependency-review.yml  docs.yml  e2e.yml  gitleaks.yml  mcp-registry.yml  megalinter.yml  release-please.yml  release.yml  research-topic-smoke.yml  scorecard.yml  trivy.yml
1.0.0/: index.html  sitemap.xml
1.0.0/changelog/: index.html
1.0.0/roadmap/: index.html
2.0.0/: index.html
2.0.0/changelog/: index.html
2.0.0/prompts/: index.html
2.0.0/search/: search_index.json
2.0.1/: index.html
2.0.1/api/: index.html
2.0.1/resources/: index.html
2.1.0/changelog/: index.html
2.1.0/overview/: index.html
2.1.0/search/: search_index.json
2.1.1/: 404.html
2.1.1/search/: search_index.json
2.1.2/api/: index.html
2.1.2/prompts/: index.html
2.1.3/changelog/: index.html
2.1.3/contributing/: index.html
deployment/: Caddyfile  Dockerfile.hosted  anonymised_logging.py  bearer_token.py  deploy.sh  health.py  metrics.py  privacy.html  ratelimit_middleware.py  terms.html
dev/: 404.html  index.html  sitemap.xml
dev/api/: index.html
dev/changelog/: index.html
dev/cli/: index.html
dev/contributing/: index.html
dev/overview/: index.html
dev/prompts/: index.html
dev/resources/: index.html
dev/roadmap/: index.html
dev/search/: search_index.json
docs/: index.md  overview.md
docs-legacy/: google-adk-agent--README.md  root--README.md  summary.md
docs/api/: index.md  openapi.json  openapi.md  python-client.md
docs/cli/: index.md
docs/concepts/: data-modes.md  mcp-and-http-surface.md  mcp-native.md  provenance.md
docs/features/: api-contracts.md  cli-shell-surface.md  data-preparation.md  google-adk-agent-demo.md  http-api.md  known-issues.md  law-loading-and-indexing.md  mcp-law-tools.md  mcp-prompts.md  mcp-registry-distribution.md  mcp-resources.md  mcp-sampling.md  public-hosted-service.md  research-topic-smart-tool.md  source-provenance.md  supported-laws.md
docs/modules/: cli.md  container-runtime.md  corpus.md  data-preparation.md  google-adk-agent.md  hosted-deployment.md  mcp-server.md  prompts.md  resources.md  sampling.md
docs/operations/: ci-smoke.md  code-review.md  coverage-baseline-phase2.md  coverage-baseline.md  hosted-service.md  launch-procedure.md  migration-v1-v2.md  openssf-application.md  production-deployment.md  sbom.md  security-review-2026-05.md  slsa.md  soak-test.md  threat-model.md  v2-launch-announcement.md  verify-with-cosign.md  versioning.md
docs/prompts/: index.md
docs/quickstart/: claude-desktop.md  cursor.md  docker.md  stdio.md  uvx.md
docs/resources/: index.md
docs/tools/: get_corpus_coverage.md  get_law.md  get_norm.md  get_related_norms.md  get_source_limitations.md  get_source_metadata.md  list_laws.md  research_topic.md  resolve_citation.md  search_laws.md
latest/: 404.html  index.html
latest/api/: index.html
latest/changelog/: index.html
latest/cli/: index.html
latest/contributing/: index.html
latest/overview/: index.html
latest/prompts/: index.html
latest/resources/: index.html
latest/roadmap/: index.html
mcp/: __init__.py  config.py  http_api.py  http_models.py  parser.py  requirements.txt  server.py
mcp/legal_texts/: __init__.py  dataset.py  errors.py  eu_neighbors.py  eurlex_xml.py  gii_bulk.py  gii_toc.py  gii_xml.py  importer.py  manifest.py  models.py  normalizer.py  registry.py  relationships.py  resolver.py  runtime.py  search.py  sources.py  state_law.py  state_law_coverage.py  state_law_inventory.py  validation.py
mcp/tests/: conftest.py  test_check_spdx_header.py  test_corpus_manifest.py  test_dataset_validation.py  test_dsgvo_full_counts.py  test_error_contracts.py  test_eu_neighbor_acts.py  test_fixture_coverage.py  test_generated_package.py  test_gii_bulk_normalization.py  test_gii_toc_discovery.py  test_http_api.py  test_library.py  (+23 more)
prepare_data/: __init__.py  build_corpus.py  bundle_packager.py  lawde_wrapper.py  normalizer.py  prepare_gesetze_im_internet.sh
scripts/: __init__.py  benchmark_corpus_runtime.py  check_spdx_header.py  verify_ci_workflow.py  verify_dsgvo_full_counts.py  verify_e2e.py  verify_eu_neighbor_sources.py  verify_full_corpus_bundle.py  verify_gii_corpus_gate.py  verify_gii_discovery.py  verify_phase1_release.py  verify_pre_flip.py  verify_release.py  verify_state_law_adapters.py  verify_state_law_inventory.py  verify_state_law_pdf_sources.py  verify_uv_runtime_docker.py
tests/: conftest.py  test_check_spdx_header.py  test_corpus_manifest.py  test_dataset_validation.py  test_dsgvo_full_counts.py  test_error_contracts.py  test_eu_neighbor_acts.py  test_fixture_coverage.py  test_generated_package.py  test_gii_bulk_normalization.py  test_gii_toc_discovery.py  test_http_api.py  test_library.py  test_mcp_tools.py  test_models_serialization.py  test_normalizer.py  test_normalizer_eurlex.py  test_normalizer_gii.py  test_operational_corpus_gates.py  test_parser.py  test_parser_branches.py  test_registry.py  test_relationship_records.py  test_release_gate.py  test_research_topic_e2e.py  test_research_topic_models.py  test_research_topic_prompts.py  test_resolver.py  test_runtime_coverage_relationships.py  test_runtime_error_paths.py  test_scope_graph_policy.py  test_search.py  test_search_scaling.py  test_server.py  test_source_import.py  test_source_import_extended.py  test_source_matrix.py  test_source_matrix_live.py  test_state_law_adapters.py  test_state_law_coverage.py  (+4 more)
(+616 files in other folders)
