[project]
name = "legal-text-mcp-de"
version = "0.1.0"
description = "Python MCP server and HTTP API for loading, validating, searching, and resolving German legal texts with source provenance."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Martin Klein", email = "martin@klein.business" },
]
maintainers = [
    { name = "Martin Klein", email = "martin@klein.business" },
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "legal-tech",
    "german-law",
    "dsgvo",
    "gdpr",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]==1.23.0",
    "rapidfuzz",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/klein-business/legal-text-mcp-de"
Repository = "https://github.com/klein-business/legal-text-mcp-de"
Issues = "https://github.com/klein-business/legal-text-mcp-de/issues"
Changelog = "https://github.com/klein-business/legal-text-mcp-de/blob/main/CHANGELOG.md"
Security = "https://github.com/klein-business/legal-text-mcp-de/security/policy"

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "PyYAML~=6.0.1",
    "ruff",
    "detect-secrets~=1.5.0",
    "mypy~=1.13.0",
    "pytest-cov~=6.0.0",
]
prepare-data = [
    "GitPython~=3.1.32",
    "PyYAML~=6.0.1",
    "docopt~=0.6.2",
    "lxml",
    "cssselect~=1.1.0",
    "requests~=2.33.0",
    "beautifulsoup4~=4.9.3",
    "roman-numbers~=1.0.2",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.12"
files = ["scripts", "mcp"]
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "scripts.*"
strict = true

[[tool.mypy.overrides]]
module = "mcp.*"
# Per-module ratchet to strict planned. Currently plain mypy as warning-gate.
strict = false
