[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "legal-text-mcp-de"
version = "0.1.0"
description = "Python MCP server and HTTP API for loading, validating, searching, and resolving German legal texts with source provenance."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Martin Klein", email = "martin@klein.business" },
]
maintainers = [
    { name = "Martin Klein", email = "martin@klein.business" },
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "legal-tech",
    "german-law",
    "dsgvo",
    "gdpr",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]==1.23.0",
    "rapidfuzz",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
]

[project.urls]
Homepage = "https://klein-business.github.io/legal-text-mcp-de"
Repository = "https://github.com/klein-business/legal-text-mcp-de"
Issues = "https://github.com/klein-business/legal-text-mcp-de/issues"
Changelog = "https://github.com/klein-business/legal-text-mcp-de/blob/main/CHANGELOG.md"
Security = "https://github.com/klein-business/legal-text-mcp-de/security/policy"

[tool.hatch.build.targets.wheel]
packages = ["mcp"]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "PyYAML~=6.0.1",
    "ruff~=0.15.0",
    "detect-secrets~=1.5.0",
    "mypy~=1.13.0",
    "pytest-cov~=6.0.0",
    "pre-commit~=4.0",
    "cyclonedx-bom~=5.0",
]
docs = [
    "mkdocs~=1.6.0",
    "mkdocs-material~=9.5.0",
    "mkdocstrings[python]~=0.27.0",
    "mkdocs-mermaid2-plugin~=1.2.0",
    "mkdocs-git-revision-date-localized-plugin~=1.3.0",
    "mike~=2.1.0",
    "mkdocs-redirects~=1.2.0",
]
prepare-data = [
    "GitPython~=3.1.32",
    "PyYAML~=6.0.1",
    "docopt~=0.6.2",
    "lxml",
    "cssselect~=1.1.0",
    "requests~=2.33.0",
    "beautifulsoup4~=4.9.3",
    "roman-numbers~=1.0.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.12"
files = ["scripts", "mcp"]
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "scripts.*"
strict = true

[[tool.mypy.overrides]]
module = "mcp.config"
strict = true

[[tool.mypy.overrides]]
module = "mcp.http_models"
strict = true

[[tool.mypy.overrides]]
module = "mcp.legal_texts.errors"
strict = true

[[tool.mypy.overrides]]
module = "mcp.legal_texts.models"
strict = true

[[tool.mypy.overrides]]
module = "mcp.legal_texts.sources"
strict = true

[[tool.mypy.overrides]]
module = "mcp.*"
# Per-module ratchet to strict planned. Currently plain mypy as warning-gate.
strict = false

[tool.coverage.run]
source = ["mcp"]
branch = false
omit = [
    "mcp/tests/*",
    "mcp/__pycache__/*",
]

[tool.coverage.report]
fail_under = 88
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
