[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "legal-text-mcp-de"
version = "2.0.0-rc.3"
description = "Python MCP server and HTTP API for loading, validating, searching, and resolving German legal texts with source provenance."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Martin Klein", email = "martin@klein.business" },
]
maintainers = [
    { name = "Martin Klein", email = "martin@klein.business" },
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "legal-tech",
    "german-law",
    "dsgvo",
    "gdpr",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]==1.27.1",
    "rapidfuzz",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
]

[project.urls]
Homepage = "https://klein-business.github.io/legal-text-mcp-de"
Repository = "https://github.com/klein-business/legal-text-mcp-de"
Issues = "https://github.com/klein-business/legal-text-mcp-de/issues"
Changelog = "https://github.com/klein-business/legal-text-mcp-de/blob/main/CHANGELOG.md"
Security = "https://github.com/klein-business/legal-text-mcp-de/security/policy"

[project.scripts]
legal-text-mcp-de = "legal_text_mcp_de.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_text_mcp_de"]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "PyYAML~=6.0.1",
    "ruff~=0.15.0",
    "detect-secrets~=1.5.0",
    "mypy~=2.1.0",
    "pytest-cov~=7.1.0",
    "pre-commit~=4.0",
    "cyclonedx-bom~=7.3",
    "types-beautifulsoup4~=4.12",
    "zstandard~=0.23.0",
    "pytest-asyncio~=0.24",
]
docs = [
    "mkdocs~=1.6.0",
    "mkdocs-material~=9.7.6",
    "mkdocstrings[python]~=1.0.4",
    "mkdocs-mermaid2-plugin~=1.2.0",
    "mkdocs-git-revision-date-localized-plugin~=1.5.2",
    "mike~=2.2.0",
    "mkdocs-redirects~=1.2.0",
]
prepare-data = [
    "GitPython~=3.1.32",
    "PyYAML~=6.0.1",
    "docopt~=0.6.2",
    "lxml",
    "cssselect~=1.4.0",
    "requests~=2.34.2",
    "beautifulsoup4~=4.14.3",
    "roman-numbers~=1.0.2",
    "types-beautifulsoup4~=4.12",
    "SPARQLWrapper~=2.0.0",
    "zstandard~=0.23.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["google-adk-agent/"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.12"
files = ["scripts", "src"]
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "scripts.*"
strict = true

[[tool.mypy.overrides]]
module = "legal_text_mcp_de.config"
strict = true

[[tool.mypy.overrides]]
module = "legal_text_mcp_de.http_models"
strict = true

[[tool.mypy.overrides]]
module = "legal_text_mcp_de.legal_texts.errors"
strict = true

[[tool.mypy.overrides]]
module = "legal_text_mcp_de.legal_texts.models"
strict = true

[[tool.mypy.overrides]]
module = "legal_text_mcp_de.legal_texts.sources"
strict = true

[[tool.mypy.overrides]]
module = "legal_text_mcp_de.*"
# Per-module ratchet to strict planned. Currently plain mypy as warning-gate.
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/legal_text_mcp_de"]
branch = true
omit = [
    "tests/*",
    "src/legal_text_mcp_de/__pycache__/*",
]

[tool.coverage.report]
# Combined (statement + branch) floor. Statement-only is currently 90.1%
# and branch-only is currently 80.0%, both above the OpenSSF Best Practices
# Gold thresholds (90% statement, 80% branch).
fail_under = 86
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
